1/24/12 Simsharing: removed logManager reset call, resolves #3224
1/23/12 Simsharing: add convenience constructors for creating IUserComponent from Object and Class
1/19/12 Simsharing: Send "enabled" flag from SimSharingIcon.  Send events from mouse presses on disabled swing components. See #3218
1/19/12 Simsharing: Cleanly shutdown and finish sending messages to mongo server before the application exits
1/18/12 Simsharing: refinements to builder pattern for parameter sets
1/18/12 Simsharing: add UserComponentType to UserMessages, delete IComponentType
1/17/12 added NonInteractiveEventListener for sending non-interactive sim-sharing messages on Swing components and phetgraphics sprites
1/17/12 added SimSharingLinearValueControl (implementation identical to SimSharingLogarithmicValueControl! bad!)
1/17/12 add start/EndDrag messages to SimSharingLogarithmicValueControl, cleanup and simplify the sim-sharing hooks in AbstractValueControl
1/17/12 use HALF_UP (nearest neighbor) rounding in DefaultDecimalFormat
1/12/12 Simsharing: Added IP address lookup
1/12/11 SimSharing: #3216, support customization of Swing drag listeners via both subclassing and mutation
1/12/12 Simsharing: Added an option to auto-save data collection log, see #3215
1/11/12 Simsharing: revise SimSharingDragListener (Swing) to use same pattern as SimSharingDragHandler (Piccolo)
1/11/12 Simsharing: factor out SimSharingDragPoints, for use in Swing and Piccolo drag handlers
1/9/12 Simsharing: Converter varargs Parameter to ParameterSet, see #3209
1/6/12 Simsharing: Converted to use interface/enum messages, see #3209
1/5/12 Added user/system/model message types, see #3209
1/5/12 Removed Property<T> descriptions, see #3202
1/3/12 #3202, add missing sim-sharing events to SimSharingLogMenuItem, remember directory last visited in file chooser